--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<ul class="sidenav">
     		<li><a href="prepare.html">Prepare</a></li>
-    		<li><a href="Pack.html">Pack</a></li>
+    		<li><a href="pack.html">Pack</a></li>
    	 		<li><a href="Send.html">Send</a></li>
    		 	<li><a href="track.html">Track</a></li>
 		</ul>
