--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 	
 	<body>
 		<ul class="sidenav">
-    		<li><a href="prepare.html">Prepare</a></li>
-    		<li><a href="pack.html">Pack</a></li>
+    		<li><a href="Prepare.html">Prepare</a></li>
+    		<li><a href="Pack.html">Pack</a></li>
    	 		<li><a href="Send.html">Send</a></li>
-   		 	<li><a href="track.html">Track</a></li>
+   		 	<li><a href="Track.html">Track</a></li>
+   		 	<li><a href="gallery.html">Gallery</a></li>
 		</ul>
 
 		<div class="content">
@@ -24,25 +25,25 @@
     	<div class="wrap">
         	<div class="responsive">
             	<div class="gallery">
-               		<a href="Prepare.html"> <img src="455753-PF9AT9-360.jpg" alt="Cinque Terre" width="400" height="200"></a>
+               		<a href="Prepare.html"> <img src="prepare/455753-PF9AT9-360.jpg" alt="Cinque Terre" width="400" height="200"></a>
             	</div>
         	</div>
         	
         	<div class="responsive">
             	<div class="gallery">
-               		<a href="Pack.html" > <img src="bench-accounting-MGaFENpDCsw-unsplash.jpg" alt="Cinque Terre" width="400" height="200"></a>
+               		<a href="Pack.html" > <img src="pack/bench-accounting-MGaFENpDCsw-unsplash.jpg" alt="Cinque Terre" width="400" height="200"></a>
             	</div>
 			</div>
 			
 			<div class="responsive">
 				<div class="gallery">
-					<a href="Send.html" > <img src="elevate-GAdkOpqbTfo-unsplash.jpg" alt="Cinque Terre" width="400" height="200"></a>
+					<a href="Send.html" > <img src="send/elevate-GAdkOpqbTfo-unsplash.jpg" alt="Cinque Terre" width="400" height="200"></a>
 				</div>
 			</div>
 			
 			<div class="responsive">
 				<div class="gallery">
-					<a href="Track.html" ><img src="ben-4B-Iz7n26Pk-unsplash.jpg" alt="Cinque Terre" width="400" height="200"></a>
+					<a href="Track.html" ><img src="track/ben-4B-Iz7n26Pk-unsplash.jpg" alt="Cinque Terre" width="400" height="200"></a>
 				</div>
 			</div>
 			</div>
