--- a/track.html
+++ b/track.html
@@ -11,6 +11,7 @@
     <li><a href="Pack.html">Pack</a></li>
     <li><a href="Send.html">Send</a></li>
     <li><a href="Track.html">Track</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
 </ul>
 <div class="content">
 		
