--- a/pack.html
+++ b/pack.html
@@ -7,10 +7,10 @@
 <body>
 
 <ul class="sidenav">
-    <li><a href="prepare.html">Prepare</a></li>
-    <li><a href="pack.html">Pack</a></li>
+    <li><a href="Prepare.html">Prepare</a></li>
+    <li><a href="Pack.html">Pack</a></li>
     <li><a href="Send.html">Send</a></li>
-    <li><a href="track.html">Track</a></li>
+    <li><a href="Track.html">Track</a></li>
     <li><a href="gallery.html">Gallery</a></li>
 </ul>
 <div class="content">
