--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	
 	<body>
 		<ul class="sidenav">
-    		<li><a href="prepare.html">Prepare</a></li>
-    		<li><a href="pack.html">Pack</a></li>
+    		<li><a href="prepare.html">prepare</a></li>
+    		<li><a href="pack.html">pack</a></li>
    	 		<li><a href="Send.html">Send</a></li>
    		 	<li><a href="track.html">Track</a></li>
    		 	<li><a href="gallery.html">Gallery</a></li>
